// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render test WHEN I render the component THEN it should match the snapshot 1`] = `
<div
  className="sc-bdfBwQ ixcnvM"
>
  <div
    className="sc-gsTCUz fFutaN"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    />
  </div>
</div>
`;

exports[`Render test with child WHEN I render the component THEN it should match the snapshot 1`] = `
<div
  className="sc-bdfBwQ ixcnvM"
>
  <div
    className="sc-gsTCUz fFutaN"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div>
        Foo-boo
      </div>
    </div>
  </div>
</div>
`;

exports[`Render test with title WHEN I render the component THEN it should match the snapshot 1`] = `
<div
  className="sc-bdfBwQ ixcnvM"
>
  <div
    className="sc-gsTCUz fFutaN"
  >
    <h1
      className="sc-dlfnbm jWLUWq"
    >
      Foo-title
    </h1>
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div>
        Foo-boo
      </div>
    </div>
  </div>
</div>
`;
